Add parallel translation limit and request buffer settings
Introduces settings for maximum parallel translations and a request buffer to prevent exceeding daily API limits. Implements a semaphore-based limiter service, updates UI components to support new settings, adds migration scripts for default values, and enhances Chutes usage logic to respect the buffer. Translation strings for these features are also added.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -153,7 +153,10 @@
       "lastSynced": "Last synced",
       "chutesMissingApiKey": "Chutes API key is missing.",
       "usageLoadError": "Unable to load usage information.",
-      "modelSearchPlaceholder": "Search models..."
+      "modelSearchPlaceholder": "Search models...",
+      "chutesRequestBuffer": "Request safety buffer",
+      "chutesRequestBufferDescription": "Stop translations when remaining daily requests reach this buffer. Helps prevent exceeding limits with parallel translations.",
+      "chutesRequestBufferError": "Please enter a valid number"
     },
     "translate": {
       "sourceAndTargetTitle": "Source and target translation",
@@ -176,7 +179,9 @@
       "retryDelay": "Delay between retries:",
       "retryDelayDescription": "Initial delay before retrying, in seconds.",
       "retryDelayMultiplier": "Retry delay multiplier:",
-      "retryDelayMultiplierDescription": "Factor by which the delay increases after each retry."
+      "retryDelayMultiplierDescription": "Factor by which the delay increases after each retry.",
+      "maxParallelTranslations": "Concurrent file translations:",
+      "maxParallelTranslationsDescription": "Maximum number of subtitle files to translate simultaneously. Higher values speed up processing but use more API requests. Set to 1 for sequential translation."
     },
     "subtitle": {
       "title": "Subtitle",
