--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -174,6 +174,8 @@
       "description": "Modify translation request settings by changing batch size or retry options.",
       "useBatchTranslation": "Use batch translation",
       "useBatchTranslationDescription": "Process multiple subtitle lines together in batches to improve translation efficiency and context awareness. Note that single-line translations with context are still more reliable and of higher quality.",
+      "maxBatchSize": "Max batch size:",
+      "maxBatchSizeDescription": "Maximum number of subtitle lines to process in a single batch. Leave at 0 for no limit.",
       "maxRetries": "Max translation retries:",
       "maxRetriesDescription": "Maximum number of retries per line or batch.",
       "retryDelay": "Delay between retries:",
@@ -181,7 +183,11 @@
       "retryDelayMultiplier": "Retry delay multiplier:",
       "retryDelayMultiplierDescription": "Factor by which the delay increases after each retry.",
       "maxParallelTranslations": "Concurrent file translations:",
-      "maxParallelTranslationsDescription": "Maximum number of subtitle files to translate simultaneously. Higher values speed up processing but use more API requests. Set to 1 for sequential translation."
+      "maxParallelTranslationsDescription": "Maximum number of subtitle files to translate simultaneously. Higher values speed up processing but use more API requests. Set to 1 for sequential translation.",
+      "enableBatchFallback": "Retry failed batches:",
+      "enableBatchFallbackDescription": "When a batch translation fails, automatically retry with smaller chunks before failing the entire file.",
+      "maxBatchSplitAttempts": "Retry levels:",
+      "maxBatchSplitAttemptsDescription": "How many times to split and retry failed batches. Level 1 retries the full batch, level 2 splits in half, level 3 splits in thirds. If all levels fail, the translation task fails."
     },
     "subtitle": {
       "title": "Subtitle",
