Add manual media translation trigger to UI and API
Introduces a 'Translate Now' button for movies, shows, and seasons in the client, allowing users to manually queue subtitle translations. Adds TranslateMediaRequest and TranslateMediaResponse models, a new /api/translate/media endpoint, and supporting logic in the server and service layers. Updates translation processor to support forced processing and returns the number of translations queued. Also updates translation strings for new UI elements.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -35,7 +35,10 @@
     "episodeSubtitles": "Subtitles",
     "ageThreshold": "Delay",
     "hours": "hours",
-    "priority": "Prioritize"
+    "priority": "Prioritize",
+    "translateNow": "Translate",
+    "translationQueued": "{count} translation(s) queued",
+    "noTranslationsNeeded": "No translations needed"
   },
   "tvShows": {
     "title": "Title",
@@ -49,7 +52,10 @@
     "episodeSubtitles": "Subtitles",
     "ageThreshold": "Delay",
     "hours": "hours",
-    "priority": "Prioritize"
+    "priority": "Prioritize",
+    "translateNow": "Translate",
+    "translationQueued": "{count} translation(s) queued",
+    "noTranslationsNeeded": "No translations needed"
   },
   "translations": {
     "title": "Title",
