Add system limit for concurrent translations
Introduces an API endpoint to retrieve system limits, specifically the max concurrent translations, and updates the client to display and enforce this limit in the UI. Also updates translation files and documentation to clarify the behavior and default values for concurrency settings.

--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -195,6 +195,7 @@
       "retryDelayMultiplierDescription": "Factor waarmee de vertraging na elke poging toeneemt.",
       "maxParallelTranslations": "Gelijktijdige bestandsvertalingen:",
       "maxParallelTranslationsDescription": "Maximaal aantal ondertitelbestanden dat tegelijkertijd wordt vertaald. Hogere waarden versnellen de verwerking maar gebruiken meer API-aanvragen. Stel in op 1 voor sequentiële vertaling.",
+      "maxParallelTranslationsLimit": "Maximum: {max}",
       "enableBatchFallback": "Mislukte batches opnieuw proberen:",
       "enableBatchFallbackDescription": "Wanneer een batch vertaling mislukt, automatisch opnieuw proberen met kleinere delen voordat het hele bestand als mislukt wordt gemarkeerd.",
       "maxBatchSplitAttempts": "Batch-splitsingsniveaus:",
