--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -193,6 +193,7 @@
       "retryDelayMultiplierDescription": "Factor by which the delay increases after each retry.",
       "maxParallelTranslations": "Concurrent file translations:",
       "maxParallelTranslationsDescription": "Maximum number of subtitle files to translate simultaneously. Higher values speed up processing but use more API requests. Set to 1 for sequential translation.",
+      "maxParallelTranslationsLimit": "Maximum: {max}",
       "enableBatchFallback": "Retry failed batches:",
       "enableBatchFallbackDescription": "When a batch translation fails, automatically retry with smaller chunks before failing the entire file.",
       "maxBatchSplitAttempts": "Batch split levels:",
