Add embedded subtitle extraction and display
Introduces support for probing, extracting, and displaying embedded subtitles for movies and episodes. Updates frontend components to show embedded subtitles with extraction status and allows users to extract text-based streams. Adds backend API endpoints for listing, probing, and extracting embedded subtitles, and integrates auto-extraction into the translation job. Updates translation files with embedded subtitle UI strings.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -13,6 +13,19 @@
     "tasks": "Tasks",
     "logs": "Logs"
   },
+  "embedded": {
+    "title": "Embedded Subtitles",
+    "extract": "Extract",
+    "extracting": "Extracting...",
+    "textBased": "Text-based",
+    "imageBased": "Image-based subtitle (PGS/VobSub). Cannot be extracted without OCR.",
+    "extracted": "Extracted",
+    "notExtracted": "Not extracted - Click to extract",
+    "extractSuccess": "Subtitle extracted successfully",
+    "extractFailed": "Extraction failed",
+    "forced": "Forced",
+    "default": "Default"
+  },
   "translationTest": {
     "title": "Translation Test",
     "description": "Test translation of a subtitle file without saving results. Useful for debugging.",
