feat: add translation request logging and history tracking
- Add TranslationRequestLog entity and migrations for MySQL/SQLite
- Add API endpoints to fetch logs for translation requests
- Update TranslationJob to log progress (started, completed, failed)
- Add log viewing UI panel in TranslationPage.vue
- Add LingarrDbContextFactory for design-time migrations
- Add i18n translations for new log-related UI elements

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -110,7 +110,11 @@
     "logs": "Translation Logs",
     "clearLogs": "Clear",
     "waitingForLogs": "Waiting for test to start...",
-    "noTestSelected": "Click the test button on a translation item to start a test."
+    "noTestSelected": "Click the test button on a translation item to start a test.",
+    "viewLogs": "View Logs",
+    "noLogs": "No logs were recorded for this translation.",
+    "loadLogsError": "Failed to load logs for this translation.",
+    "close": "Close"
   },
   "schedule": {
     "jobName": "Job Name",
