feat: make signs/songs skipping configurable
- Added 'skip_signs_songs_embedded' setting (default: true)
- Added 'Skip Signs/Songs tracks' toggle to Subtitle Settings
- Modified embedded subtitle selection to allow Signs/Songs tracks when setting is disabled
- Signs/Songs tracks are still penalized but not hard-skipped if disabled

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -267,6 +267,8 @@
       "stripAssDrawingCommandsDescription": "Skip vector graphics data (shapes, signs) found in ASS-converted SRT files. These are untranslatable and waste API calls.",
       "cleanSourceAssDrawings": "Also clean source files:",
       "cleanSourceAssDrawingsDescription": "Additionally remove drawing commands from the original source subtitle file.",
+      "skipSignsSongs": "Skip 'Signs / Songs' tracks:",
+      "skipSignsSongsDescription": "When searching for embedded subtitles, skip tracks labeled as Signs/Songs/Karaoke, even if they match the source language. Turn this OFF if you want to translate these tracks.",
       "subtitleTag": "Subtitle tag"
     },
     "indexing": {
