Add priority media support for translation requests
Introduces a priority queue for translation jobs, allowing priority media and retries to be processed ahead of regular requests. Adds IsPriorityMedia flag to translation requests, updates UI to display priority status, and adjusts backend logic to assign jobs to the appropriate Hangfire queue. Also updates translations to include a label for priority media.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -94,6 +94,7 @@
     "source": "Source",
     "target": "Target",
     "status": "Status",
+    "priority": "Priority media",
     "progress": "Progress",
     "completed": "Completed",
     "cancel": "Cancel",
