--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -94,6 +94,7 @@
     "source": "Bron",
     "target": "Doel",
     "status": "Status",
+    "priority": "Prioriteitsmedia",
     "progress": "Voortgang",
     "completed": "Voltooid",
     "cancel": "Annuleren",
