Add media subtitle search to translation test
Introduces a fuzzy-search feature for movies and episodes in the translation test page, allowing users to easily select subtitle files without manually entering paths. Adds backend API endpoint, supporting model, and UI components for searching and selecting subtitles. Updates translations for new UI elements.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -30,6 +30,12 @@
     "title": "Translation Test",
     "description": "Test translation of a subtitle file without saving results. Useful for debugging.",
     "configuration": "Configuration",
+    "searchMedia": "Search Media",
+    "searchPlaceholder": "Search by movie, show, or episode...",
+    "searchHelp": "Start typing a movie, show, or episode name and pick a subtitle below to fill in the path automatically.",
+    "searchResultsTitle": "Search Results",
+    "noSearchResults": "No media with subtitles matched your search.",
+    "selectedFromSearch": "Using subtitle from",
     "subtitlePath": "Subtitle File Path",
     "subtitlePathPlaceholder": "/media/path/to/subtitle.srt",
     "sourceLanguage": "Source Language",
