--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -30,6 +30,12 @@
     "title": "Vertaaltest",
     "description": "Test vertaling van een ondertitelbestand zonder resultaten op te slaan. Handig voor het debuggen.",
     "configuration": "Configuratie",
+    "searchMedia": "Zoek media",
+    "searchPlaceholder": "Zoek op film, serie of aflevering...",
+    "searchHelp": "Typ een film-, serie- of aflevernaam en kies hieronder een ondertitel om het pad automatisch in te vullen.",
+    "searchResultsTitle": "Zoekresultaten",
+    "noSearchResults": "Geen media met ondertitels gevonden voor deze zoekopdracht.",
+    "selectedFromSearch": "Geselecteerde ondertitel van",
     "subtitlePath": "Ondertitelbestandspad",
     "subtitlePathPlaceholder": "/media/path/to/subtitle.srt",
     "sourceLanguage": "Brontaal",
