Testing UI stuff

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -97,6 +97,7 @@
   },
   "translations": {
     "title": "Title",
+    "queue": "Queue",
     "source": "Source",
     "target": "Target",
     "status": "Status",
