--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -97,6 +97,7 @@
   },
   "translations": {
     "title": "Titel",
+    "queue": "Wachtrij",
     "source": "Bron",
     "target": "Doel",
     "status": "Status",
