feat: Update to v1.0.0 stable release
- Change version from 1.0.3 beta to 1.0.0 stable

- Switch version check to T9es/lingarr-on-steroids repo

- Add Based on Lingarr link to original upstream repo

- Add green styling to version badge

- Add GithubIcon component

- Add empty state translations for translation queue sections

- Update translation request service and store

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -121,7 +121,10 @@
     "viewLogs": "View Logs",
     "noLogs": "No logs were recorded for this translation.",
     "loadLogsError": "Failed to load logs for this translation.",
-    "close": "Close"
+    "close": "Close",
+    "noActiveTranslations": "No translations currently in progress.",
+    "noFailedTranslations": "No failed translations.",
+    "noQueuedTranslations": "No translations in queue."
   },
   "schedule": {
     "jobName": "Job Name",
@@ -152,7 +155,8 @@
     "statusCancelled": "Cancelled",
     "statusInterrupted": "Interrupted",
     "updateAvailable": "Update {version} is available",
-    "currentVersion": "Version: {version} beta",
+    "currentVersion": "Version: {version}",
+    "basedOnLingarr": "Based on Lingarr",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "saved": "saved",
